--- a/1.html
+++ b/1.html
@@ -5,7 +5,7 @@
 		<title>html实例</title>
 	</head>
 	<body>
-		<h1>html图片标签和隐藏文档显示</h1>
+		<h1>this is git test</h1>
 		<img src="images/pic2.jpg" width="400px" border="5px">
 		<!-- 
 			src source  资源  
